example/errors/interpret/_invalid_function_call.box
fun abc() {
    println("hmm");
}

abc(1, 2);
